tablet maily done, contact section left, small fixes to dark mode and mixins

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -51,3 +51,5 @@ $max-width-small: 450px;
 
 $border-radius: 1rem;
 $center-object: 0 auto;
+
+$shadow-main: 1px 5px 6px rgba(0, 0, 0, 0.404);
